--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 
 .chat-messages {
-    height: 410px;
+    height: 450px;
     overflow-y: auto;
+    padding: 10px;
 }
+
 
 .chat-messages div {
     margin-bottom: 10px;
@@ -17,9 +19,10 @@
 #message-input {
     flex: 1;
     padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
+    border: 1px solid #ccc; 
     outline: none;
+    width: 100%;
+    border-radius: 6px;
 }
 
 
@@ -39,10 +42,16 @@
 }
 .message-dis{
     display: flex;
-    gap: 10px;
+    gap: 5px;
+}
+.message-div{
+    display: flex;
+    justify-content: end;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .img{
-    width: 3%;
+    width: 25px;
     border-radius: 100%;
 }
 .message-text{
@@ -53,3 +62,84 @@
     margin-top: 2%;
 
 }
+ 
+  .done-icon {
+    width: 16px;
+    height: 16px;
+    border: 2px solid #8d8d8d; /* Green color */
+    border-radius: 50%; /* Rounded shape */
+    position: relative;
+  }
+  
+  .done-icon::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 4px;
+    height: 8px;
+    border-width: 0 2px 2px 0;
+    border-color: gray;
+    border-style: solid;
+    transform: translate(-50%, -50%) rotate(45deg); /* Rotates the element to form a checkmark */
+  }
+  .done-icon-delivered {
+    width: 16px;
+    height: 16px;
+    background: #000;
+    border: 2px solid #000000; /* Green color */
+    border-radius: 50%; /* Rounded shape */
+    position: relative;
+  }
+  
+  .done-icon-delivered::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 4px;
+    height: 8px;
+    border-width: 0 2px 2px 0;
+    border-color: white;
+    border-style: solid;
+    transform: translate(-50%, -50%) rotate(45deg); /* Rotates the element to form a checkmark */
+  }
+  .done-icon-read {
+    width: 16px;
+    height: 16px;
+    background: #176101;
+    border: 2px solid #176101; /* Green color */
+    border-radius: 50%; /* Rounded shape */
+    position: relative;
+  }
+  
+  .done-icon-read::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 4px;
+    height: 8px;
+    border-width: 0 2px 2px 0;
+    border-color: white;
+    border-style: solid;
+    transform: translate(-50%, -50%) rotate(45deg); /* Rotates the element to form a checkmark */
+  }
+  .dot-img{
+    width: 12%;
+    height: 6%;
+  }
+  .right-section{
+    display: flex;
+    justify-content: end;
+  }
+  .message-two{
+    background-color:#f1f1f1;
+    text-align: right;
+    margin-right: 26px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 5px;
+  }
