--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,20 @@
   flex-direction: column;
 }
 
+@media only screen and (max-width: 600px) {
+  .chat-messages {
+    height: 84vh;
+    bottom: 20px;
+    overflow-y: auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .chat-message-div{
+    height: 78vh;
+  }
+}
+
 .chat-messages > :first-child {
   margin-top: auto !important;
 }
@@ -141,11 +155,12 @@
   }
   .message-two{
     background-color:#f1f1f1;
-    text-align: right;
+    /* text-align: right; */
     margin-right: 48px;
     padding-top: 6px;
     padding-bottom: 6px;
     padding-right: 12px;
+    padding-left: 12px;
     border-radius: 5px;
   }
  .message-box{
